@@ -16,7 +16,7 @@
       "magento/magento-composer-installer": "*"
     },
     "type": "magento2-module",
-    "version": "2.3.3",
+    "version": "2.3.4",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
