@@ -2,6 +2,7 @@
 Date	  : Version: Description
 =====================================
 
+2020-09-23: v2.3.4 : Fix order page redirect if successful transaction on some servers.
 2020-09-16: v2.3.3 : Fix sessions cleared in some browsers.
 2020-01-24: v2.3.2 : Improve testing validation for existing invoices.
                      Tested with Magento 2.3.3.
